<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.c24.jenkinied.presentation.dashboard.DashboardFragment"
        android:label="@string/fragment_dashboard_title"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_details"
            app:destination="@id/navigation_details" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.c24.jenkinied.presentation.details.DetailsFragment"
        android:label="@string/fragment_details_title"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="buildId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.c24.jenkinied.presentation.login.LoginFragment"
        android:label="@string/fragment_login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>